--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-ng-autocomplete": "^2.0.12",
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
+    "got": "^12.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
